<resources>
    <string name="app_name">SproutLeaf</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_login_failed">You email or password were incorrect.</string>
    <string name="give_name_prompt_text">Hi! What is your name?</string>
    <string name="give_name_hint_text">Enter your name here</string>
    <string name="auth_tagline">Dedicated to making your plant thrive!</string>
    <string name="auth_register_button_text">Register</string>
    <string name="auth_sign_in_button_text">Sign In</string>
    <string name="fragment_give_name_button_text">Submit</string>
    <string name="auth_register_failed">There was an error creating an account. Please check that you have entered a valid email and your password is at least 6 characters.</string>
    <string name="auth_invalid_password">Invalid password</string>
    <string name="auth_user_not_found">No account could be found with the email address specified.</string>
    <string name="auth_user_disabled">The account with this email has been disabled.</string>
    <string name="auth_password_changed">The password has been changed.</string>
    <string name="auth_invalid_token">User token not correctly formed.</string>
    <string name="auth_account_exists">An account with that email already exists.</string>
    <string name="auth_error_credential">There was an error linking this account to another account of yours that has already been made.</string>
    <string name="main_heading_text">Welcome to SproutLeaf!</string>
    <string name="main_diagnose_button_text">Diagnose my Plant</string>
    <string name="main_journal_button_text">Plant Journal</string>
    <string name="main_info_text">By running an image of your plant through a trained neural network, we can make a prediction about whether your plant needs attention or not.\n\nClick \"Diagnose my Plant\" below to start.</string>
    <string name="prediction_info_text_healthy">Your plant looks to be healthy! You\'re doing great, %1$s!</string>
    <string name="prediction_info_text_attention">Your plant isn\'t in need of urgent attention, but could be better!</string>
    <string name="prediction_info_text_urgent">Your plant is in need of urgent attention!</string>
    <string name="prediction_summary_subheader_text">Our predictions are never 100% accurate.</string>
    <string name="predicting_spinner_text">Analyzing…</string>
    <string name="authenticating_spinner_text">Authenticating…</string>
    <string name="main_toolbar_text">Home</string>
    <string name="journal_toolbar_text">%1$s\'s Plants</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="new_plant_button_text">+</string>
    <string name="create_plant_title_text">New Plant Profile</string>
    <string name="give_plant_name_prompt_text">Give your plant a name!</string>
    <string name="give_plant_name_hint_text">e.g. George</string>
    <string name="give_plant_species_prompt_text">What is the species of your plant?</string>
    <string name="give_plant_species_hint_text">e.g. Peace Lily</string>
    <string name="give_plant_birthday_prompt_text">When is your plant\'s birthday?</string>
    <string name="give_plant_birthday_hint_text">e.g. 6/12/2018</string>
    <string name="plant_card_birthday">Born on %1$s</string>
    <string name="take_plant_image_prompt_text">Take a picture of your plant!</string>
    <string name="creating_plant_profile_spinner_text">Creating plant profile…</string>
    <string name="loading_plant_profiles_spinner_text">Loading plants…</string>
    <string name="prediction_result_toolbar_text">Prediction Result</string>
    <string name="plant_profile_toolbar_text">Editing %1$s Plant Profile</string>
    <string name="edit_plant_profile_species_hint_text">No species set</string>
    <string name="edit_plant_profile_birthday_no_exist_text">No birthday set</string>
    <string name="plant_profile_birthday_no_exist_text">No birthday set</string>
    <string name="edit_plant_profile_notes_header_text">Notes</string>
    <string name="edit_plant_profile_notes_hint_text">No notes yet</string>
    <string name="plant_tap_indicator_text">Tap for more</string>
    <string name="journal_empty_text">Either you have no plant profiles or they are loading. If it takes too long, try to reopen this page.</string>
</resources>
