<!-- fragment_edit_name.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/give_name_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button_green_dark_green_stroke"
        android:fontFamily="@font/lato"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="17dp"
        android:paddingTop="12dp"
        android:paddingRight="17dp"
        android:paddingBottom="12dp"
        android:text="@string/fragment_give_name_button_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/give_name_field"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/give_plant_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/give_name_prompt_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/give_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/give_name_hint_text"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/give_plant_name_prompt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/give_name_sproutleaf_image"
        android:layout_width="73dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:rotation="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toEndOf="@+id/give_name_field"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sproutleaf_logo_icon"
        android:layout_marginRight="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>